--- a/TE/211004_CEN3_methylation.Rmd
+++ b/TE/211004_CEN3_methylation.Rmd
@@ -24,7 +24,7 @@ library(bsseq)
 # BSgenome package for T2T genome -- find on globus and install
 library(BSgenome.t2t.v1.0.release)
 
-figs="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly/figures"
+figs="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly/TE/revision"
 dat="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly"
 ```
 
@@ -33,10 +33,10 @@ dat="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly"
 chm13_meth <- read_tsv(paste0(dat, "/methylation_calls/methylation_frequency_50kb_split.tsv")) %>%
   GRanges()
 
-regs <- read_tsv(paste0(dat, "/TE/TeloComposites/TELO-composite-unitA_RM-polish_APR2121_SHoyt.txt"), col_names = T) %>%
+regs <- read_tsv(paste0(dat, "/TE/revision/chr3_cen-TEisland_chm13v1.0.bed"), col_names = T) %>%
   mutate(len=end-start) %>%
-  filter(len>0) %>%
-  filter(len<3000) %>%
+#  filter(len>500) %>%
+ # filter(len<2000) %>%
   mutate(ID=n())
 
 ```
@@ -44,9 +44,9 @@ regs <- read_tsv(paste0(dat, "/TE/TeloComposites/TELO-composite-unitA_RM-polish_
 ```{r 5kb, echo=F}
 
 # size of flanking region
-flankn <- 20000
+flankn <- 100
 # size of repeat relative to flanking region
-bodylen <- 1/5
+bodylen <- 5
 
 # add flanks
 l1_regions <- regs %>%
@@ -54,68 +54,40 @@ l1_regions <- regs %>%
   GRanges()
 
 # add methylation data
-ovl <- findOverlaps(chm13_meth, l1_regions)
-genes.ovl <- as.data.frame(regs)[subjectHits(ovl),] %>%
-  dplyr::mutate(genewidth = end - start) %>%
-  dplyr::rename(gene_start = start, gene_end = end) 
-
-# calculate distance from start and end, depending on strand 
-chm13.ovl <- as.data.frame(chm13_meth[queryHits(ovl),]) %>%
-  bind_cols(genes.ovl) %>%
-  dplyr::rename(seqnames = 1) %>%
-  mutate(dist = ifelse(Orientation=="pos", start - gene_start, gene_end-start)) %>%
-  mutate(dist = ifelse(dist < 0, dist/flankn,
-      ifelse(dist < genewidth,
-        bodylen * dist / genewidth,
-        bodylen + (dist - genewidth)/flankn)), 
-    dist = round(dist,2)
-    )
-
-# bin data to make plot pretty
-n_windows=1000
-chm13.ovl$cut = cut(chm13.ovl$dist, breaks=n_windows)
-
-chm13.ovl.labs <- chm13.ovl %>%
-  group_by(cut,`49bp_yes/no`) %>%
-  summarise(med = median(methylated_frequency), top = quantile(methylated_frequency, 0.75), bot = quantile(methylated_frequency, 0.25), n_genes = length(methylated_frequency)) %>%
-  mutate(x_tmp = str_sub(cut, 2, -2)) %>% 
-  separate(x_tmp, c("min", "max"), sep = ",") %>% 
-  mutate_at(c("min", "max"), as.double) %>%
-  ungroup() %>%
-  group_by(`49bp_yes/no`) %>%
-  arrange(min) %>%
-  mutate(med_smooth = rollmean(med, 10, NA),top_smooth = rollmean(top, 10, NA),bot_smooth = rollmean(bot, 10, NA))
+ovl <- FindOvls(chm13_meth, l1_regions) %>%
+  mutate(med_smooth = rollmean(methylated_frequency, 40, NA))
 
 # plot -- include annotation for number of repeats in each group
-p <- ggplot(chm13.ovl.labs,aes( x = min, y = med_smooth, color=`49bp_yes/no`, fill=`49bp_yes/no`), alpha=.5)+
-  geom_ribbon(aes(ymin=bot_smooth, ymax=top_smooth), alpha=0.2, size=0)+
+p <- ggplot(ovl,aes( x = start, y = med_smooth, color=group, fill=group), alpha=.5)+
+#  geom_ribbon(aes(ymin=bot_smooth, ymax=top_smooth), alpha=0.2, size=0)+
   geom_line(aes(y=med_smooth), alpha=.5, size=1) +
-  geom_vline(xintercept = 0) +
-  geom_vline(xintercept = bodylen)+
-  geom_point(alpha=.5)+
+#  geom_vline(xintercept = 0) +
+#  geom_vline(xintercept = bodylen)+
+#  geom_point(alpha=.5)+
   labs( x = "Genomic Position", y = "Aggregated Methylation Frequency") +
-  theme_classic()+scale_x_continuous(breaks= c(-1,0,bodylen,bodylen + 1), labels = c(paste0("-",flankn/1e3,"kb"),"Start","End",paste0("+",flankn/1e3,"kb")))+
-geom_text(data = chm13.ovl %>% 
-              group_by(`49bp_yes/no`) %>%
-              dplyr::select(`49bp_yes/no`,gene_start) %>%
-              distinct() %>%
-              summarise(n_genes=n()) %>%
-              distinct() %>%
-              mutate(height=case_when(`49bp_yes/no` == "yes" ~ 0, 
-                          `49bp_yes/no` == "no" ~ .1, 
-                          TRUE ~ .02)),
-            aes(x=1,
-                y=.85+height,
-                label=paste("n =",comma(n_genes))
-                ), hjust=1)+
-theme(legend.position = "top")
-
+  theme_classic()+theme(legend.position = "none") #+scale_x_continuous(breaks= c(-1,0,bodylen,bodylen + 1), labels = c(paste0("-",flankn/1e3,"kb"),"Start","End",paste0("+",flankn/1e3,"kb")))
+#+
+#geom_text(data = chm13.ovl %>% 
+#              group_by(region) %>%
+#              dplyr::select(region,gene_start) %>%
+#              distinct() %>%
+#              summarise(n_genes=n()) %>%
+#              distinct() %>%
+#              mutate(height=case_when(region == "yes" ~ 0, 
+#                          region == "no" ~ .1, 
+#                          TRUE ~ .02)),
+#            aes(x=1,
+#                y=.85+height,
+#                label=paste("n =",comma(n_genes))
+#                ), hjust=1)+
+#theme(legend.position = "top")
+#
 
 p
 
 
 ggsave(
-  paste0(figs, "/evol_meth/TE/","CHM13_subTELO_metaplot.pdf"),
+  paste0(figs,"CHM13_CEN3_metaplotREV.pdf"),
   plot = p,
   scale = 1,
   width = 12,
@@ -170,6 +142,15 @@ q <- ggplot(chm13.ovl.labs, aes(x=dist,y=1, fill=cg))+geom_tile()+scale_x_contin
 
 # use cowplot to combine plots on the same X-axis
 plot_grid(p,q, ncol=1, align = "v",rel_heights = c(3,.5))
+
+
+ggsave(
+  paste0(figs,"CHM13_CEN3_metaplotREV_withCpGbar.pdf"),
+  plot = last_plot(),
+  scale = 1,
+  width = 12,
+  height = 8,
+)
 ```
 
 
