--- a/TE/211004_Hsat_methylation.Rmd
+++ b/TE/211004_Hsat_methylation.Rmd
@@ -24,7 +24,7 @@ library(bsseq)
 # BSgenome package for T2T genome -- find on globus and install
 library(BSgenome.t2t.v1.0.release)
 
-figs="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly/figures"
+figs="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly/TE/revision"
 dat="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly"
 ```
 
@@ -33,20 +33,25 @@ dat="/kyber/Data/Nanopore/Analysis/gmoney/CHM13/v1.0_final_assembly"
 chm13_meth <- read_tsv(paste0(dat, "/methylation_calls/methylation_frequency_50kb_split.tsv")) %>%
   GRanges()
 
-regs <- read_tsv(paste0(dat, "/TE/TeloComposites/TELO-composite-unitA_RM-polish_APR2121_SHoyt.txt"), col_names = T) %>%
+regs <- read_tsv(paste0(dat, "/censat/restriction_sites/chm13.GAATTC.frags.bed"), col_names = c("chr","start","end")) %>%
   mutate(len=end-start) %>%
-  filter(len>0) %>%
-  filter(len<3000) %>%
-  mutate(ID=n())
+  filter(chr == "chr1") %>%
+  filter(start > 137286706) %>%
+  filter(end < 137453382) %>%
+  #filter(len>1700) %>%
+  #filter(len<1800) %>%
+  mutate(Orientation="pos") %>%
+  mutate(ID=row_number())
 
+#chr1:137,286,706-137,453,382
 ```
 
 ```{r 5kb, echo=F}
 
 # size of flanking region
-flankn <- 20000
+flankn <- 50
 # size of repeat relative to flanking region
-bodylen <- 1/5
+bodylen <- 4
 
 # add flanks
 l1_regions <- regs %>%
@@ -63,7 +68,7 @@ genes.ovl <- as.data.frame(regs)[subjectHits(ovl),] %>%
 chm13.ovl <- as.data.frame(chm13_meth[queryHits(ovl),]) %>%
   bind_cols(genes.ovl) %>%
   dplyr::rename(seqnames = 1) %>%
-  mutate(dist = ifelse(Orientation=="pos", start - gene_start, gene_end-start)) %>%
+  mutate(dist = ifelse(Orientation=="+", start - gene_start, gene_end-start)) %>%
   mutate(dist = ifelse(dist < 0, dist/flankn,
       ifelse(dist < genewidth,
         bodylen * dist / genewidth,
@@ -72,55 +77,40 @@ chm13.ovl <- as.data.frame(chm13_meth[queryHits(ovl),]) %>%
     )
 
 # bin data to make plot pretty
-n_windows=1000
+n_windows=500
 chm13.ovl$cut = cut(chm13.ovl$dist, breaks=n_windows)
 
 chm13.ovl.labs <- chm13.ovl %>%
-  group_by(cut,`49bp_yes/no`) %>%
+  group_by(cut) %>%
   summarise(med = median(methylated_frequency), top = quantile(methylated_frequency, 0.75), bot = quantile(methylated_frequency, 0.25), n_genes = length(methylated_frequency)) %>%
   mutate(x_tmp = str_sub(cut, 2, -2)) %>% 
   separate(x_tmp, c("min", "max"), sep = ",") %>% 
   mutate_at(c("min", "max"), as.double) %>%
   ungroup() %>%
-  group_by(`49bp_yes/no`) %>%
+ # group_by(group) %>%
   arrange(min) %>%
   mutate(med_smooth = rollmean(med, 10, NA),top_smooth = rollmean(top, 10, NA),bot_smooth = rollmean(bot, 10, NA))
 
+
 # plot -- include annotation for number of repeats in each group
-p <- ggplot(chm13.ovl.labs,aes( x = min, y = med_smooth, color=`49bp_yes/no`, fill=`49bp_yes/no`), alpha=.5)+
+p <- ggplot(chm13.ovl.labs,aes( x = min, y = med_smooth), alpha=.5)+
   geom_ribbon(aes(ymin=bot_smooth, ymax=top_smooth), alpha=0.2, size=0)+
   geom_line(aes(y=med_smooth), alpha=.5, size=1) +
   geom_vline(xintercept = 0) +
   geom_vline(xintercept = bodylen)+
   geom_point(alpha=.5)+
   labs( x = "Genomic Position", y = "Aggregated Methylation Frequency") +
-  theme_classic()+scale_x_continuous(breaks= c(-1,0,bodylen,bodylen + 1), labels = c(paste0("-",flankn/1e3,"kb"),"Start","End",paste0("+",flankn/1e3,"kb")))+
-geom_text(data = chm13.ovl %>% 
-              group_by(`49bp_yes/no`) %>%
-              dplyr::select(`49bp_yes/no`,gene_start) %>%
-              distinct() %>%
-              summarise(n_genes=n()) %>%
-              distinct() %>%
-              mutate(height=case_when(`49bp_yes/no` == "yes" ~ 0, 
-                          `49bp_yes/no` == "no" ~ .1, 
-                          TRUE ~ .02)),
-            aes(x=1,
-                y=.85+height,
-                label=paste("n =",comma(n_genes))
-                ), hjust=1)+
-theme(legend.position = "top")
-
-
+  theme_classic()+scale_x_continuous(breaks= c(-1,0,bodylen,bodylen + 1), labels = c(paste0("-",flankn/1e3,"kb"),"Start","End",paste0("+",flankn/1e3,"kb")))
 p
 
 
-ggsave(
-  paste0(figs, "/evol_meth/TE/","CHM13_subTELO_metaplot.pdf"),
-  plot = p,
-  scale = 1,
-  width = 12,
-  height = 5,
-)
+#ggsave(
+#  paste0(figs,"CHM13_SST1_metaplotREV.pdf"),
+#  plot = p,
+#  scale = 1,
+#  width = 12,
+#  height = 5,
+#)
 ```
 
 
